# seadawg

./: README.md
js/: .gitignore  README.md
js/examples/: basic.ts
js/src/: index.ts
js/src/orig/: core.ts
js/src/v1/: core.ts
js/src/v2/: core.ts  data.ts
js/tools/: bad_state_runner.ts  thrasher.ts
js/tools/bad_states/: 5.json
rust/: Cargo.toml  PERFORMANCE.md  README.md
rust/examples/: audit.rs  audit_dawg.rs  bad_state.rs  basics_cdawg.rs  basics_dawg.rs  csv_reader.rs  csv_reader_dawg.rs  thrasher.rs  thrasher_dawg.rs  txt_reader_dawg.rs
rust/src/: cmp.rs  core.rs  data.rs  foundation.rs  id_allocator.rs  lib.rs  map.rs  traversal.rs  utils.rs  vec.rs
rust/src/bdawg/: core.rs  mod.rs  traversal.rs
rust/src/bt/: core.rs  mod.rs  traversal.rs
rust/src/tdawg/: core.rs  mod.rs  traversal.rs
