[package]
name = "seadawg"
version = "0.1.0"
authors = ["normano <novenseri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
croaring = { git = "https://github.com/saulius/croaring-rs" }
fxhash = "0.2.1"
scalable_cuckoo_filter = "0.1.2"
map_vec = "0.3.0"

[dev-dependencies]
byte-unit = "3.0.3"
csv = "1.1"
rand = "0.7.3"
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"